# research-agent

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HUONG_DAN.md  LICENSE  PUSH_GITHUB.md  README.md  TAI_LIEU_KY_THUAT.md  pyproject.toml  reputation.example.json  requirements.txt  run-ui.ps1  run.ps1
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
src/research_agent/: __init__.py  agent.py  arxiv.py  cache.py  calculator.py  chat.py  citations.py  cli.py  config.py  content.py  convert.py  crossref.py  decision.py  dictionary.py  docx_export.py  error_diagnostics.py  errors.py  evaluate.py  fetch_tool.py  github.py  llm.py  llm_cache.py  local_documents.py  memory.py  models.py  multi_agent.py  news.py  observability.py  openalex.py  pdf_export.py  prefetch.py  pubmed.py  recency.py  reflection.py  render.py  report_writer.py  retry.py  search_tool.py  source_quality.py  stock.py  (+7 more)
tests/: conftest.py  fakes.py  test_arxiv.py  test_calculator.py  test_chat.py  test_cli.py  test_convert.py  test_crossref.py  test_dictionary.py  test_docx_export.py  test_enhancements.py  test_error_diagnostics.py  test_evaluate.py  test_fetch_tool_http.py  test_github.py  test_integration.py  test_llm_cache.py  test_llm_provider.py  test_memory.py  test_multi_agent.py  test_news.py  test_openalex.py  test_pdf_export.py  test_prefetch.py  test_progress.py  test_properties.py  test_pubmed.py  test_recency.py  test_reflection.py  test_report_style.py  test_reputation.py  test_search_providers.py  test_security_hardening.py  test_source_quality.py  test_stock.py  test_tool_io.py  test_ui_config.py  test_ui_helpers.py  test_ui_i18n.py  test_ui_smoke.py  (+5 more)
ui/: app.py  capture_gif.py  capture_screenshots.py  config_ui.py  helpers.py  i18n.py  steps.py  theme.py
