[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.2.0"
description = "An autonomous CLI AI research agent that searches the web, reads sources, and synthesizes a cited Markdown report."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "research-agent contributors" }]
keywords = ["ai", "agent", "research", "llm", "cli", "web-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "httpx>=0.27",
    "trafilatura>=1.8",
    "ddgs>=9.0",
    "pypdf>=6.14.0",
    "Markdown>=3.7",
    "bleach>=6.2",
]

[project.urls]
Homepage = "https://github.com/tridpt/research-agent"
Repository = "https://github.com/tridpt/research-agent"
Issues = "https://github.com/tridpt/research-agent/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.10",
    "streamlit>=1.30",
    "fpdf2>=2.7",
    "python-docx>=1.1",
]
ui = [
    "streamlit>=1.30",
]
pdf = [
    "fpdf2>=2.7",
]
docx = [
    "python-docx>=1.1",
]

[project.scripts]
research-agent = "research_agent.cli:run"
research-agent-eval = "research_agent.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
